# drug-dashboard

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
app/: agents.py  app.py  utils.py
data/: README.md  michigan_drug.db
data/Drug Utilization Report - 2013/: Drug Utilization Report Data - 2013.xlsx
data/Drug Utilization Report - 2014/: Drug Utilization Report Data - 2014.xlsx
data/Drug Utilization Report - 2015/: Drug Utilization Report Data - 2015.xlsx
data/Drug Utilization Report - 2016/: Drug Utilization Report Data - 2016.xlsx
data/Drug Utilization Report - 2017/: Drug Utilization Report Data - 2017.xlsx
data/Drug Utilization Report - 2018/: 2018_Michigan_Drug_Utilization_Report_FINAL.xlsx
data/Drug Utilization Report - 2019/: 2019_Michigan_Drug_Utilization_Report_FINAL.xlsb
data/Drug Utilization Report - 2020/: 2020_Michigan_Drug_Utilization_Report_FINAL.xlsx
data/Drug Utilization Report - 2021/: 2021_Michigan_Drug_Utilization_Report_FINAL.xlsb
data/Drug Utilization Report - 2022/: 2022_Michigan_Drug_Utilization_Report_FINAL.xlsb
data_cleaning/: clean.ipynb
